Bug 316743 - wrong avatars are loaded for offline users
Summary: wrong avatars are loaded for offline users
Status: RESOLVED FIXED
Alias: None
Product: telepathy
Classification: Unmaintained
Component: contactlist (other bugs)
Version First Reported In: 0.5.80
Platform: Other Linux
: NOR normal
Target Milestone: Future
Assignee: Telepathy Bugs
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2013-03-14 23:16 UTC by Alin M Elena
Modified: 2013-03-20 19:55 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Alin M Elena 2013-03-14 23:16:26 UTC
wrong avatars are loaded for offline users

this is a two parts bug...

1. when offline the stored paths from ~/.kde4/share/config/ktelepathy-avatarsrc
are wiped out for offline avatars.
2. the same avatar is loaded from cache for offline avatars..

patches two come on rb

Reproducible: Always
Comment 1 Alin M Elena 2013-03-15 11:14:12 UTC
Git commit 6864e5a72557e65832dbd8cab377e9267e24e983 by Alin M Elena.
Committed on 15/03/2013 at 12:12.
Pushed by elena into branch 'master'.

fixes gray avatars
REVIEW: 109490

M  +6    -5    KTp/contact.cpp
M  +1    -1    KTp/contact.h

http://commits.kde.org/telepathy-common-internals/6864e5a72557e65832dbd8cab377e9267e24e983
Comment 2 Martin Klapetek 2013-03-20 19:55:33 UTC
Git commit e9d7007f184bba5cd37e06edac59d7dffdbf93b4 by Martin Klapetek.
Committed on 20/03/2013 at 20:54.
Pushed by mklapetek into branch 'master'.

Rewrite avatarPixmap() to use pixmap cache, simplifies code

The previous code stored things in pixmap cache but didn't really load
them. This stores all avatars in pixmap cache and first checks if the
cache has avatar for us, only if not proceeds to actually load things.

REVIEW: 109563

M  +34   -21   KTp/contact.cpp
M  +5    -2    KTp/contact.h

http://commits.kde.org/telepathy-common-internals/e9d7007f184bba5cd37e06edac59d7dffdbf93b4