Rewrite avatarPixmap() to use pixmap cache, simplifies code

The previous code stored things in pixmap cache but didn't really load
them. This stores all avatars in pixmap cache and first checks if the
cache has avatar for us, only if not proceeds to actually load things.

REVIEW: 109563
BUG: 316743